# youtube-playlist-viewer

./: .flake8  .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  pyproject.toml  requirements.txt
.github/workflows/: general.yml
e2e/: test-main-page.spec.ts
frontend/: package-lock.json
frontend/public/: index.html
frontend/src/: App.js  Video.js  VideoList.js
parser/: Dockerfile
react-app/: index.html  package-lock.json
react-app/src/: App.jsx
react-app/src/components/Button/: Button.jsx
react-app/src/components/ConfCard/: ConfCard.jsx
react-app/src/components/ConfVideoList/: ConfVideoList.jsx
react-app/src/components/SubmitForm/: SubmitForm.css  SubmitForm.jsx
react-app/src/components/TalkCard/: TalkCard.jsx
services/agent/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  sql_app.db
services/agent/app/: crud.py  data.py  database.py  main.py  models.py  schemas.py  tasks.py  test_auto_generated.py  test_endpoints.py
services/agent/src/: Dockerfile  requirements.txt  sql_app.db  test_endpoints.py
services/agent/src/app/: crud.py  dependencies.py  main.py  models.py  schemas.py  sql_app.db
services/agent/src/app/routers/: data.py
services/agent/tests/: test_auto_generated.py  test_endpoints.py
tests/test_e2e/: conftest.py  test_main_page.py
