[tool.poetry]
name = "agent"
version = "0.1.0"
description = "Service to process playlists"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.10"
fastapi = "^0.115.4"
fastapi-cli = "^0.0.5"
sqlalchemy = "^2.0.36"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
httpx = "^0.27.2"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
